add netlify cms

--- a/index.html
+++ b/index.html
@@ -192,7 +192,17 @@ layout: default
     <script src="lazysizes.min.js" async></script>
 
 
-
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 </body>
 
 </html>
