--- a/My_YALI_Story_2_enroute_to_ASCON.html
+++ b/My_YALI_Story_2_enroute_to_ASCON.html
@@ -43,12 +43,12 @@
    <meta property="og:url" content="https://www.dum3bi.com/">
    <meta property="og:type" content="website">
    <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
-   <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+   <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
    <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
    <meta property="og:image:alt" content="Dumebi's logo">
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Dumebi Iwuchukwu">
-   <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Lagos, building brands at the speed of culture.">
+   <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
    <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
    <meta property="og:type" content="website">
