add preloader for "main.css"

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- preloader
+    ================================================== -->
+    <link rel="preload" href="css/main.css" as="style">
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/base.css">
