--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria.">
+    <meta name="description" content="Dumebi Iwuchukwu is a designer, strategist and educator. He is an Art Manager and Instructor (Art Direction) at Oxygen Academy Lagos.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
