remove preload css

--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- preloader
-    ================================================== -->
-    <link rel="preload" href="css/main.css" as="style">
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/base.css">
@@ -101,7 +98,7 @@
 
             <div class="row home-content__main">
 
-                 <h1>The best solutions are found at the center of culture, design and technology.
+                 <h1>Full-Stack Designer U+1F3A8
                 </h1>
 
 
