--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 
             <div class="row home-content__main">
 
-                 <h1>Full-Stack Designer U+1F3A8
+                 <h1> Hi I'm Dumebi Iwuchukwu, <br>
+                      a designer, strategist & teacher‍ based in Lagos, Nigeria.
                 </h1>
 
 
@@ -151,7 +152,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dum3bi</h1>
-                <p class="lead"> Designer | Developer | Strategist.</p>
+                <p class="lead"> Designer | Stategist | Teacher.</p>
             </div>
         </div>
 
