--- a/offline.html
+++ b/offline.html
@@ -11,9 +11,8 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-   <meta charset="utf-8">
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
-    <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
+    <meta name="description" content="Dumebi Iwuchukwu is a designer, strategist and educator. He is an Art Manager and Instructor (Art Direction) at Oxygen Academy Lagos.">
     <meta name="theme-color" content="#449cff"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
@@ -57,6 +56,7 @@
     <!-- PWA
     ================================================== -->
     <link rel="manifest" href="manifest.json">
+
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -98,7 +98,8 @@
 
             <div class="row home-content__main">
 
-                 <h1>The best solutions are found at the center of culture, design and technology.
+                 <h1> Hi I'm Dumebi Iwuchukwu, <br>
+                      a designer, strategist & teacher‍ based in Lagos, Nigeria.
                 </h1>
 
 
@@ -151,7 +152,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dum3bi</h1>
-                <p class="lead"> Designer | Developer | Strategist.</p>
+                <p class="lead"> Designer | Stategist | Teacher.</p>
             </div>
         </div>
 
@@ -371,6 +372,8 @@
 
         </div>
 
+        <p> hello</p>
+
     </section> <!-- end s-contact -->
 
     <!-- footer
@@ -473,6 +476,14 @@
 
     <!-- Java Script
     ================================================== -->
+    <script>
+    if (!navigator.serviceWorker.controller) {
+     navigator.serviceWorker.register("/sw.js").then(function(reg) {
+         console.log("Service worker has been registered for scope: " + reg.scope);
+     });
+     }
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
     <script>
