--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
             <div class="col-six tab-full left">
               <h3>Bio.</h3>
                 <p>
-                Dumebi Iwuchukwu is driven to develop solutions accessible to the bottom of the pyramid, fusing technology, design and culture in the areas of food, health, education and water supply.<br>
-                He is a Designer, Web Developer, Brand Strategist and most of all a Teacher.<br>
-                Dumebi is presently the Art Manager and Art Direction Instructor at <a href="http://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a> where he teaches graphic design and art direction. <br>
-                He is at his best when teaching, designing, coding and executing creative ideas.<br>
+                I help brands create useful and enjoyable experiences for their consumers through strategy, design and technology with insights drawn from culture.
+                <br>
+
+                I also teach Art Direction at <a href="http://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>. <br>
+
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
 
