correct name and update bio

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>Dum3bi</h1>
+                <h1>Dumebi</h1>
                 <p class="lead"> Designer | Stategist | Teacher.</p>
             </div>
         </div>
@@ -161,7 +161,7 @@
             <div class="col-six tab-full left">
               <h3>Bio.</h3>
                 <p>
-                I help brands create useful and enjoyable experiences for their consumers through strategy, design and technology with insights drawn from culture.
+                I help brands create useful and enjoyable experiences for consumers through strategy, design and technology with insights drawn from culture.
                 <br>
 
                 I also teach Art Direction at <a href="http://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>. <br>
