--- a/index.html
+++ b/index.html
@@ -181,27 +181,23 @@
                 <ul class="skill-bars">
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
-                    <strong>Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Art Direction</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Web Development</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent80"><span>80%</span></div>
                     <strong>Brand Strategy</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>Teaching</strong>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>CX Research</strong>
                     </li>
                     <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>Empathy</strong>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>UX/UI Design</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent95"><span>95%</span></div>
+                    <strong>Communication Design</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>Brand Identity Design</strong>
                     </li>
                 </ul>
             </div>
