update http to https

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 I help brands create useful and enjoyable experiences for consumers through strategy, design and technology with insights drawn from culture.
                 <br>
 
-                I also teach Art Direction at <a href="http://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>. <br>
+                I also teach Art Direction at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>. <br>
 
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
