--- a/offline.html
+++ b/offline.html
@@ -97,11 +97,13 @@
         <div class="home-content">
 
             <div class="row home-content__main">
+              <h3>Hello There</h3>
 
-                 <h1> Hi I'm Dumebi Iwuchukwu, <br>
-                      a designer, strategist & teacher‍ based in Lagos, Nigeria.
-                </h1>
+              <h1>
+                  I'm Dumebi. <br>
+                  I help create enabling experiences for people.
 
+              </h1>
 
                 <div class="home-content__buttons">
                     <a href="#works" class="smoothscroll btn btn--stroke">
@@ -151,7 +153,7 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>Dum3bi</h1>
+                <h1>Dumebi</h1>
                 <p class="lead"> Designer | Stategist | Teacher.</p>
             </div>
         </div>
@@ -161,10 +163,11 @@
             <div class="col-six tab-full left">
               <h3>Bio.</h3>
                 <p>
-                Dumebi Iwuchukwu is driven to develop solutions accessible to the bottom of the pyramid, fusing technology, design and culture in the areas of food, health, education and water supply.<br>
-                He is a Designer, Web Developer, Brand Strategist and most of all a Teacher.<br>
-                Dumebi is presently the Art Manager and Art Direction Instructor at <a href="http://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a> where he teaches graphic design and art direction. <br>
-                He is at his best when teaching, designing, coding and executing creative ideas.<br>
+                I help brands create useful and enjoyable experiences for people through thier products, services, environments and interfaces.
+                <br>
+
+                I also teach Art Direction at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, the best advertising school in Nigeria.<br>
+
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
 
@@ -180,27 +183,23 @@
                 <ul class="skill-bars">
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
-                    <strong>Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Art Direction</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Web Development</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent80"><span>80%</span></div>
                     <strong>Brand Strategy</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>Teaching</strong>
+                    <div class="progress percent85"><span>85%</span></div>
+                    <strong>UX Research</strong>
                     </li>
                     <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>Empathy</strong>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>UI Design</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent95"><span>95%</span></div>
+                    <strong>Communication Design</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>Brand Identity Design</strong>
                     </li>
                 </ul>
             </div>
