--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -80,11 +80,12 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="index.html#home" title="home">Home</a></li>
-                <li><a href="index.html#about" title="about">About</a></li>
-                <li><a href="index.html#works" title="works">Works</a></li>
-                <li class="current"><a href="blog.html" title="blog">Blog</a></li>
-                <li><a href="index.html#contact" title="contact">Contact</a></li>
+              <ul class="header-nav">
+                  <li><a class="smoothscroll"  href="#home" title="home">Home</a></li>
+                  <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
+                  <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
+                  <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+              </ul>
             </ul>
         </nav>
 
