--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
         <div class="home-content">
 
             <div class="row home-content__main">
+              <h3>Hello There</h3>
 
-                 <h1> Hi I'm Dumebi Iwuchukwu, <br>
-                      a designer, strategist & teacher‍ based in Lagos, Nigeria.
-                </h1>
+              <h1>
+                  I'm Dumebi. <br>
+                  I help create enabling experiences for people.
 
+              </h1>
 
                 <div class="home-content__buttons">
                     <a href="#works" class="smoothscroll btn btn--stroke">
@@ -161,10 +163,10 @@
             <div class="col-six tab-full left">
               <h3>Bio.</h3>
                 <p>
-                I help brands create useful and enjoyable experiences for consumers through strategy, design and technology with insights drawn from culture.
+                I help brands create useful and enjoyable experiences for people through thier products, services, environments and interfaces.
                 <br>
 
-                I also teach Art Direction at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>. <br>
+                I also teach Art Direction at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, the best advertising school in Nigeria.<br>
 
                 He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
                 <br>
@@ -184,12 +186,12 @@
                     <strong>Brand Strategy</strong>
                     </li>
                     <li>
-                    <div class="progress percent80"><span>80%</span></div>
-                    <strong>CX Research</strong>
+                    <div class="progress percent85"><span>85%</span></div>
+                    <strong>UX Research</strong>
                     </li>
                     <li>
                     <div class="progress percent90"><span>90%</span></div>
-                    <strong>UX/UI Design</strong>
+                    <strong>UI Design</strong>
                     </li>
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
