--- a/styles.html
+++ b/styles.html
@@ -624,16 +624,16 @@
 
             <div class="row footer-bottom">
 
-                <div class="col-twelve">
-                    <div class="copyright">
-                        <span>© Copyright Hola 2017</span>
-                        <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
-                    </div>
+              <div class="col-twelve">
+                  <div class="copyright">
+                    <div>Copyright © 2019 Dumebi Iwuchukwu</div>
+                    <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                  </div>
 
-                    <div class="go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
-                    </div>
-                </div>
+                  <div class="go-top">
+                  <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
+                  </div>
+              </div>
 
             </div> <!-- end footer-bottom -->
 
