--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
               <h1>
                   I'm Dumebi. <br>
-                  I help create enabling experiences for people.
+                  I create enabling experiences for people.
 
               </h1>
 
@@ -135,6 +135,9 @@
                 <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
+                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
+            </li>
+            <li>
                 <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
@@ -154,24 +157,24 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi</h1>
-                <p class="lead"> Designer | Stategist | Teacher.</p>
+                <p class="lead">Art Director | Stategist | Teacher.</p>
             </div>
         </div>
 
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-              <h3>Bio.</h3>
+              <h3>I am an art director and brand strategist.</h3>
                 <p>
-                I help brands create useful and enjoyable experiences for people through thier products, services, environments and interfaces.
+                I help create useful, interactive and enjoyable experiences for brands, events and communities.
                 <br>
 
-                I also teach Art Direction at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, the best advertising school in Nigeria.<br>
+                I am also an instructor at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, where I teach about creativity, art direction and UI/UX Design.<br>
 
-                He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
+                I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share my designs here and on instagram and i share my thoughts on medium.
                 <br>
 
-                  Some of his favourite projects includes his work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
+                  Some of my favourite projects includes my work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
 
 
                 </p>
@@ -397,6 +400,10 @@
                     <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
+                    </a></li>
+                    <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
+                        <i class="im im-github" aria-hidden="true"></i>
+                        <span>Github</span>
                     </a></li>
                     <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-behance" aria-hidden="true"></i>
