--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                 I am also an instructor at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, where I teach about creativity, art direction and UI/UX Design.<br>
 
-                I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share my designs here and on instagram and i share my thoughts on medium.
+                I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share my designs here and I share my thoughts on <a href="https://medium.com/@dumebi" target="_blank" rel="noopener">Medium</a>.
                 <br>
 
                   Some of my favourite projects includes my work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
