--- a/index.html
+++ b/index.html
@@ -190,11 +190,7 @@
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>UX Research</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>UI Design</strong>
+                    <strong>UX/UI Design</strong>
                     </li>
                     <li>
                     <div class="progress percent95"><span>95%</span></div>
