--- a/index.html
+++ b/index.html
@@ -165,17 +165,16 @@
 
             <div class="col-six tab-full left">
               <h3>I am an art director and brand strategist.</h3>
-                <p>
-                I help create useful, interactive and enjoyable experiences for brands, events and communities.
+                <div>
+                I love to create useful, interactive and enjoyable experiences for people.  My medical radiography background helps me approach projects like i would attend to a patient, diagnosing problems before proferring solutions.<br>
+              </div>
+
+                  <p>
+                Currently I am an instructor at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, where I teach about creativity, design, art direction and UI/UX design.<br>
+
+                I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share the case studies of my projects here and my writings on <a href="https://medium.com/@dumebi" target="_blank" rel="noopener">Medium</a>.
                 <br>
-
-                I am also an instructor at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, where I teach about creativity, art direction and UI/UX Design.<br>
-
-                I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share my designs here and I share my thoughts on <a href="https://medium.com/@dumebi" target="_blank" rel="noopener">Medium</a>.
-                <br>
-
-                  Some of my favourite projects includes my work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
-
+                I love nuclear physics, talk a lot (among friends) and play lots of first-person shooter games.<br>
 
                 </p>
             </div>
@@ -184,8 +183,12 @@
                 <h3>My Skills.</h3>
 
                 <ul class="skill-bars">
+                  <li>
+                  <div class="progress percent95"><span>95%</span></div>
+                  <strong>Art Direction</strong>
+                  </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
+                    <div class="progress percent90"><span>90%</span></div>
                     <strong>Brand Strategy</strong>
                     </li>
                     <li>
@@ -193,11 +196,11 @@
                     <strong>UX/UI Design</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>Communication Design</strong>
+                    <div class="progress percent75"><span>75%</span></div>
+                    <strong>Front End Web Development</strong>
                     </li>
                     <li>
-                    <div class="progress percent90"><span>90%</span></div>
+                    <div class="progress percent95"><span>95%</span></div>
                     <strong>Brand Identity Design</strong>
                     </li>
                 </ul>
