--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
         <div class="home-content">
 
             <div class="row home-content__main">
-              <h3>Hello There</h3>
+
 
               <h1>
-                  I'm Dumebi. <br>
-                  I create enabling experiences for people.
-
+                  Hi I'm Dumebi. <br>
+              Art Direction Instructor with a background in Medical Imaging.
               </h1>
 
                 <div class="home-content__buttons">
@@ -163,14 +162,14 @@
 
         <div class="row about-content">
 
-            <div class="col-six tab-full left">
-              <h3>I am an art director and brand strategist.</h3>
+            <div>
+              <h3>I am an Art Director and Brand Strategist currently teaching Art Direction and UX Design at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a></h3>
                 <div>
                 I love to create useful, interactive and enjoyable experiences for people.  My medical radiography background helps me approach projects like i would attend to a patient, diagnosing problems before proferring solutions.<br>
               </div>
 
                   <p>
-                Currently I am an instructor at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, where I teach about creativity, design, art direction and UI/UX design.<br>
+                Currently I am an instructor at Oxygen Academy Lagos, where I teach about creativity, design, art direction and UI/UX design.<br>
 
                 I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share the case studies of my projects here and my writings on <a href="https://medium.com/@dumebi" target="_blank" rel="noopener">Medium</a>.
                 <br>
@@ -178,34 +177,13 @@
 
                 </p>
             </div>
+            <!-- START of code to display the invite link on your website -->
+            <!-- Place this block of code (including these comments) where you want the invite link to appear -->
+            <div class="idf-widget">
 
-            <div class="col-six tab-full right">
-                <h3>My Skills.</h3>
-
-                <ul class="skill-bars">
-                  <li>
-                  <div class="progress percent95"><span>95%</span></div>
-                  <strong>Art Direction</strong>
-                  </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Brand Strategy</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>UX/UI Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent80"><span>80%</span></div>
-                    <strong>Front End Web Development</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>Brand Identity Design</strong>
-                    </li>
-                </ul>
-            </div>
-
+                <p style="padding-bottom: ">
+                                I am a member of the Interaction Design Foundation, the world’s largest UX Design learning community.</p>
+                
     </section> <!-- end about -->
 
 
@@ -255,16 +233,16 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <img src="images\portfolio\gallery\Dumebi_app_concept_design.jpg" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
+                            <img src="images\portfolio\gallery\02_UX_DOJO_LOGO.png" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                          Avendator <br>
-                          Coupé
+                          02 Academy<br>
+                          UX/UI Dojo
                             </h3>
                             <p class="item-folio__cat">
-                               APP UI Design
+                               Learning Community
                             </p>
                         </div>
 
