--- a/index.html
+++ b/index.html
@@ -163,27 +163,20 @@
         <div class="row about-content">
 
             <div>
-              <h3>I am an Art Director and Brand Strategist currently teaching Art Direction and UX Design at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a></h3>
-                <div>
-                I love to create useful, interactive and enjoyable experiences for people.  My medical radiography background helps me approach projects like i would attend to a patient, diagnosing problems before proferring solutions.<br>
-              </div>
+              <h3>I am an Art Director and Brand Strategist currently teaching Art Direction and Digital Product Design at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a></h3>
 
-                  <p>
-                Currently I am an instructor at Oxygen Academy Lagos, where I teach about creativity, design, art direction and UI/UX design.<br>
-
-                I collaborate on open source projects at <a href="https://github.com/dum3bi" target="_blank" rel="noopener">Github</a>, share the case studies of my projects here and my writings on <a href="https://medium.com/@dumebi" target="_blank" rel="noopener">Medium</a>.
-                <br>
-                I love nuclear physics, talk a lot (among friends) and play lots of first-person shooter games.<br>
-
+                <p>
+                  I love to create enjoyable experiences for people. My medical radiography background helps me approach projects like i would attend to a patient, diagnosing problems before proferring solutions.
+                  I love nuclear physics, talk a lot (among friends) and play lots of first-person shooter games. I also design (Brand Identity, UX/UI), code (Web apps) and ask a lot of questions.
                 </p>
+                <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
             </div>
-            <!-- START of code to display the invite link on your website -->
-            <!-- Place this block of code (including these comments) where you want the invite link to appear -->
-            <div class="idf-widget">
 
-                <p style="padding-bottom: ">
-                                I am a member of the Interaction Design Foundation, the world’s largest UX Design learning community.</p>
-                
+
+
+
+
+
     </section> <!-- end about -->
 
 
