--- a/offline.html
+++ b/offline.html
@@ -97,12 +97,11 @@
         <div class="home-content">
 
             <div class="row home-content__main">
-              <h3>Hello There</h3>
+
 
               <h1>
-                  I'm Dumebi. <br>
-                  I help create enabling experiences for people.
-
+                  Hi I'm Dumebi. <br>
+              Art Direction Instructor with a background in Medical Imaging.
               </h1>
 
                 <div class="home-content__buttons">
@@ -135,6 +134,9 @@
                 <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
+                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
+            </li>
+            <li>
                 <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
@@ -154,55 +156,26 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi</h1>
-                <p class="lead"> Designer | Stategist | Teacher.</p>
+                <p class="lead">Art Director | Stategist | Teacher.</p>
             </div>
         </div>
 
         <div class="row about-content">
 
-            <div class="col-six tab-full left">
-              <h3>Bio.</h3>
+            <div>
+              <h3>I am an Art Director and Brand Strategist currently teaching Art Direction and Digital Product Design at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a></h3>
+
                 <p>
-                I help brands create useful and enjoyable experiences for people through thier products, services, environments and interfaces.
-                <br>
-
-                I also teach Art Direction at <a href="https://02academylagos.com" target="_blank" rel="noopener">Oxygen Academy Lagos</a>, the best advertising school in Nigeria.<br>
-
-                He is a passionate practitioner of design thinking and believes the best solutions are found at the center of culture, design and technology.
-                <br>
-
-                  Some of his favourite projects includes his work for O2 Academy Lagos, Dentiti Apparels, Lagos Live Theatre, Dangote Flour Mills, Breaking the Coconut Africa and Taruwa Festival 2019.
-
-
+                  I love to create enjoyable experiences for people. My medical radiography background helps me approach projects like i would attend to a patient, diagnosing problems before proferring solutions.
+                  I love nuclear physics, talk a lot (among friends) and play lots of first-person shooter games. I also design (Brand Identity, UX/UI), code (Web apps) and ask a lot of questions.
                 </p>
+                <p>  I am a member of the <a href="https://www.interaction-design.org/?r=chukwudumebi-iwuchukwu" target="_blank" rel="noopener">Interaction Design Foundation</a>, the world’s largest UX Design learning community.</p>
             </div>
 
-            <div class="col-six tab-full right">
-                <h3>My Skills.</h3>
 
-                <ul class="skill-bars">
-                    <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>Brand Strategy</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>UX Research</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>UI Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>Communication Design</strong>
-                    </li>
-                    <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Brand Identity Design</strong>
-                    </li>
-                </ul>
-            </div>
+
+
+
 
     </section> <!-- end about -->
 
@@ -253,16 +226,16 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <img src="images\portfolio\gallery\Dumebi_app_concept_design.jpg" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
+                            <img src="images\portfolio\gallery\02_UX_DOJO_LOGO.png" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                          Avendator <br>
-                          Coupé
+                          02 Academy<br>
+                          UX/UI Dojo
                             </h3>
                             <p class="item-folio__cat">
-                               APP UI Design
+                               Learning Community
                             </p>
                         </div>
 
@@ -397,6 +370,10 @@
                     <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
+                    </a></li>
+                    <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
+                        <i class="im im-github" aria-hidden="true"></i>
+                        <span>Github</span>
                     </a></li>
                     <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-behance" aria-hidden="true"></i>
