--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <img src="images\portfolio\gallery\02_UX_DOJO_LOGO.png" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
+                            <img src="images\portfolio\gallery\02-UX-DOJO-LOGO.png" alt="Lamborghini aventador coupe app ui design by dumebi iwuchukwu" class="lazyload">
                         </div>
 
                         <div class="item-folio__text">
