--- a/vernacular-design.html
+++ b/vernacular-design.html
@@ -281,7 +281,7 @@
 
                 <div class="col-twelve">
                   <div>Copyright © 2019 Dumebi Iwuchukwu</div>
-                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                  <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
                     <div class="go-top">
