--- a/My-YALI-Story-2-enroute-to-ASCON.html
+++ b/My-YALI-Story-2-enroute-to-ASCON.html
@@ -238,7 +238,7 @@ Taking my elephant for a walk…
                 <div class="col-twelve">
                   <div class="copyright">
                     <div>Copyright © 2019 Dumebi Iwuchukwu</div>
-                    <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                    <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                   </div>
 
                     <div class="go-top">
