--- a/index.html
+++ b/index.html
@@ -125,19 +125,10 @@
 
         <ul class="home-social">
             <li>
-                <a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
-            </li>
-            <li>
-                <a href="https://twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>Twitter</span></a>
-            </li>
-            <li>
                 <a href="https://instagram.com/dum3bi" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
                 <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
-            </li>
-            <li>
-                <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
             <li>
                 <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
@@ -356,14 +347,7 @@
                 </div>
 
                 <ul class="footer-social">
-                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener">
-                        <i class="im im-facebook" aria-hidden="true"></i>
-                        <span>Facebook</span>
-                    </a></li>
-                    <li><a href="https://twitter.com/dum3bi" target="_blank" rel="noopener">
-                        <i class="im im-twitter" aria-hidden="true"></i>
-                        <span>Twitter</span>
-                    </a></li>
+
                     <li><a href="https://instagram.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
@@ -371,10 +355,6 @@
                     <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-github" aria-hidden="true"></i>
                         <span>Github</span>
-                    </a></li>
-                    <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
                     </a></li>
                     <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
                         <i class="im im-linkedin" aria-hidden="true"></i>
@@ -390,7 +370,7 @@
             <div class="col-twelve">
                 <div class="copyright">
                   <div>Copyright © 2019 Dumebi Iwuchukwu</div>
-                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                  <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
                 <div class="go-top">
