--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -81,10 +81,10 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
               <ul class="header-nav">
-                  <li><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                  <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                  <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                  <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+                <li><a href="index.html#home" title="home">Home</a></li>
+                <li><a href="index.html#about" title="about">About</a></li>
+                <li><a href="index.html#works" title="works">Works</a></li>
+                <li><a href="index.html#contact" title="contact">Contact</a></li>
               </ul>
             </ul>
         </nav>
@@ -181,7 +181,7 @@
 
                 <div class="col-twelve">
                   <div>Copyright © 2019 Dumebi Iwuchukwu</div>
-                  <div><a  href="terms_of_service.html" target="_blank">Terms of Service</a> | <a  href="privacy_policy.html" target="_blank">Privacy Policy.</a> </div>
+                  <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
 
                     <div class="go-top">
