--- a/My-YALI-Story-2-enroute-to-ASCON.html
+++ b/My-YALI-Story-2-enroute-to-ASCON.html
@@ -31,7 +31,7 @@
     <meta charset="utf-8">
      <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
      <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
-     <meta name="theme-color" content="#449cff"/>
+     <meta name="theme-color" content="#f91e15"/>
 
    <link rel="canonical" href="https://www.dum3bi.com/">
    <meta property="og:site_name" content="Dumebi Iwuchukwu">
