--- a/My-YALI-Story.html
+++ b/My-YALI-Story.html
@@ -34,7 +34,7 @@
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
     <meta charset="utf-8">
-    <meta name="theme-color" content="#449cff"/>
+    <meta name="theme-color" content="#f91e15"/>
    <link rel="canonical" href="https://www.dum3bi.com/My_YALI_Story.html">
    <meta property="og:site_name" content="Dumebi Iwuchukwu">
    <meta property="og:locale" content="en_GB">
