--- a/vernacular-design.html
+++ b/vernacular-design.html
@@ -34,7 +34,7 @@
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
     <meta name="description" content="This is where I share my insights, findings and experiences.">
-    <meta name="theme-color" content="#449cff"/>
+    <meta name="theme-color" content="#f91e15"/>
 
     <link rel="canonical" href="https://www.dum3bi.com/blog.html">
     <meta property="og:site_name" content="Dumebi Iwuchukwu's Blog">
