--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -84,7 +84,6 @@
                 <li><a href="index.html#home" title="home">Home</a></li>
                 <li><a href="index.html#about" title="about">About</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
-                <li class="current"><a href="blog.html" title="blog">Blog</a></li>
                 <li><a href="index.html#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -109,7 +108,7 @@
                     </div>
                     <h1 class="page-header__title">
                         <a href="#0" title="">
-                            Birthing the d3ntiti Brand; a case study.
+                            Birthing the d3ntiti Brand.
                         </a>
                     </h1>
                     <ul class="page-header__meta">
