--- a/offline.html
+++ b/offline.html
@@ -13,7 +13,7 @@
   <meta name="yandex-verification" content="33730aaf93aa663d" />
     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
     <meta name="description" content="Dumebi Iwuchukwu is a designer, strategist and educator. He is an Art Manager and Instructor (Art Direction) at Oxygen Academy Lagos.">
-    <meta name="theme-color" content="#449cff"/>
+    <meta name="theme-color" content="#f91e15"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
